[package]
name = "nuker"
version = "0.8.3"
authors = ["Ashrith Mekala <ashrith@cloudwick.com>"]
edition = "2018"

[dependencies]
# AWS SDK
rusoto_ce = { version = "0.43.0-beta.1", default_features = false, features = ["rustls"] }
rusoto_cloudwatch = { version = "0.43.0-beta.1", default_features = false, features = ["rustls"] }
rusoto_core = { version = "0.43.0-beta.1", default_features = false, features = ["rustls"] }
rusoto_credential = "0.43.0-beta.1"
rusoto_ec2 = { version = "0.43.0-beta.1", default_features = false, features = ["rustls"] }
rusoto_iam = { version = "0.43.0-beta.1", default_features = false, features = ["rustls"] }
rusoto_rds = { version = "0.43.0-beta.1", default_features = false, features = ["rustls"] }
rusoto_s3 = { version = "0.43.0-beta.1", default_features = false, features = ["rustls"] }
rusoto_redshift = { version = "0.43.0-beta.1", default_features = false, features = ["rustls"] }
rusoto_emr = { version = "0.43.0-beta.1", default_features = false, features = ["rustls"] }
rusoto_glue = { version = "0.43.0-beta.1", default_features = false, features = ["rustls"] }
rusoto_sts = { version = "0.43.0-beta.1", default_features = false, features = ["rustls"] }
rusoto_sagemaker = { version = "0.43.0-beta.1", default_features = false, features = ["rustls"] }
rusoto_es = { version = "0.43.0-beta.1", default_features = false, features = ["rustls"] }
rusoto_elbv2 = { version = "0.43.0-beta.1", default_features = false, features = ["rustls"] }
# Core
async-trait = "0.1"
tokio = { version = "0.2.13", features = ["macros", "rt-threaded"] }
futures = "0.3"
# Error Handling
derive_more = "0.99.3"
failure = "0.1.6"
failure_derive = "0.1.6"
# Logging
chrono = "0.4"
colored = "1.9"
tracing = "0.1"
tracing-subscriber = "0.2.3"
tracing-futures = "0.2.3"
# Parsing Cli
clap = "2.33"
# Parsing Config
humantime = "2.0.0"
humantime-serde = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
regex = "1"
# Util
dyn-clone = "1.0"

[dev-dependencies]
env_logger = "0.7.1"
rusoto_mock = { version = "0.43.0-beta.1", default_features = false, features = ["rustls"] }